<resources>
    <string name="app_name">Zenbo Classroom Mode</string>

    <string name="dialog_example">Classroom mode</string>

    <string name="button_presentation">Presentation / Sharing</string>
    <string name="button_group_discussion">Group discussion</string>
    <string name="button_sharing">Sharing</string>
    <string name="button_after_class">After class</string>
    <string name="title_activity_groub_discusstion">groub_discusstion</string>
    <string name="google_classroom_app">Google classroom app</string>

    <string name="group_1">Group 1</string>
    <string name="group_2">Group 2</string>
    <string name="group_3">Group 3</string>
    <string name="group_4">Group 4</string>
    <string name="group_5">Group 5</string>
    <string name="front">In front of room</string>
    <string name="zenbo_front">Move Zenbo to front of room</string>
    <string name="title_activity_group_discussion">GroupDiscussion</string>
    <string name="title_activity_group_discusstion">GroupDiscusstion</string>
</resources>
