<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroupDiscusstion">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Groups"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btGroup1"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="184dp"
        android:text="@string/group_1"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btGroup2"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginStart="480dp"
        android:layout_marginTop="184dp"
        android:text="@string/group_2"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btGroup5"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginStart="480dp"
        android:layout_marginTop="420dp"
        android:text="@string/group_5"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btGroup3"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginStart="892dp"
        android:layout_marginTop="184dp"
        android:text="@string/group_3"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btGroup4"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="420dp"
        android:text="@string/group_4"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btFront"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginStart="884dp"
        android:layout_marginTop="420dp"
        android:text="@string/front"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>